--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -79,6 +79,7 @@
             <li><a [routerLink]="['falcon-dashboard-analytics-campaigns']">Ad campaigns perfomance</a></li>
             <li><a [routerLink]="['falcon-dasboard-Management-Team-progress']">Team Progress</a></li>
             <li><a [routerLink]="['falcon-dasboard-E-commerce-Good-Afternoon']">Good-Afternoon!</a></li>
+            <li><a [routerLink]="['falcon-e-commerce-Total-Sales']">Total Sales </a></li>
             <li><a [routerLink]="['Falcon-Analytics-Completed']">Componented Goals</a></li>
             <li><a [routerLink]="['falcon-dashboard-default-running']">Running Projects</a></li>
             <li><a [routerLink]="['falcon-dashboard-analytics-intelligence']">Ask Falcon Intelligence</a></li>
