--- a/src/app/feature/falcon/dashboard/shopping-cart/shopping-cart.component.html
+++ b/src/app/feature/falcon/dashboard/shopping-cart/shopping-cart.component.html
@@ -1,7 +1,18 @@
 <div class="border border-gray-400 h-auto w-fit rounded-lg">
     <div class="flex items-center p-3">
-    <span>Shopping Cart</span>
+    <span class="grow">Shopping Cart</span>
+    <a href="" class="text-blue-700">View Details</a>
+    <div class="dropdown dropdown-end">
+        <label tabindex="0" class="btn btn-ghost rounded-btn">...</label>
+        <ul tabindex="0" class="menu dropdown-content p-2 shadow bg-base-100 rounded-box w-52 mt-4">
+            <li><a>View</a></li>
+            <li><a>Export</a></li>
+            <li>___________________________</li>
+            <li class="text-red-500"><a>Remove</a></li>
+        </ul>
     </div>
+    </div>
+   
     <div>
         <table class="table">
                 <tbody>
