--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -122,6 +122,7 @@
             <li><a [routerLink]="['falcon-dashboard-default-TOP_PRODUCTS']">TOP PRODUCTS </a></li>
             <li><a [routerLink]="['falcon-e-commerce-pos-location']">Sales by POS location </a></li>
             <li><a [routerLink]="['falcon-dashboard-e-commerce-Shopping-Cart']">Shopping Cart</a></li>
+            <li><a [routerLink]="['falcon-dashboard-e-commerce-Top-Products']">Top products</a></li>
 
 
         </div>
