cambios en top products

--- a/src/app/feature/helpdesk/report/helpdesk-chat-volume/helpdesk-chat-volume.component.html
+++ b/src/app/feature/helpdesk/report/helpdesk-chat-volume/helpdesk-chat-volume.component.html
@@ -1,1 +1,8 @@
-
+<div style="display: block;">
+    <canvas baseChart class="w-2/6 h-2/6"
+      [type]="'line'"
+      [data]="lineChartData"
+      [options]="lineChartOptions"
+      [legend]="lineChartLegend">
+    </canvas>
+</div>
