cambios de e-commerce weekly Sales

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -122,6 +122,7 @@
             <li><a [routerLink]="['falcon-dashboard-default-TOP_PRODUCTS']">TOP PRODUCTS </a></li>
             <li><a [routerLink]="['falcon-e-commerce-pos-location']">Sales by POS location </a></li>
             <li><a [routerLink]="['falcon-e-commerce-Product_Gird_Product_Details']">Product gird y product details </a></li>
+            <li><a [routerLink]="['falcon-e-commerce-wekly-Sales']"> e-commerce wekly sales </a></li>
 
 
         </div>
