--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -82,6 +82,7 @@
             <li><a [routerLink]="['Falcon-dashboard-crm-weclometo']">Welcome to</a></li> 
             <li><a [routerLink]="['falcon-e-commerce-Total-Sales']">Total Sales </a></li>
             <li><a [routerLink]="['Falcon-dashboard-Social-create-post']">Create Post</a></li>
+            <li><a [routerLink]="['Falcon-dashboard-Social-Add-to-your-feed']">Add to your feed</a></li>
             <li><a [routerLink]="['Falcon-Analytics-Completed']">Componented Goals</a></li>
             <li><a [routerLink]="['falcon-dashboard-default-running']">Running Projects</a></li>
             <li><a [routerLink]="['falcon-dashboard-analytics-intelligence']">Ask Falcon Intelligence</a></li>
