--- a/src/app/feature/falcon/dasboard/social-add-to-your-feed/social-add-to-your-feed.component.html
+++ b/src/app/feature/falcon/dasboard/social-add-to-your-feed/social-add-to-your-feed.component.html
@@ -1,6 +1,6 @@
-<div class="shadow-lg ">
-    <div class="w-96 bg-gray-50 h-12">
-        <div class="flex flex-col-2 m-3 pt-3">
+<div class="shadow-lg border-2 w-96 rounded-lg">
+    <div class="w-90 bg-gray-50 h-12">
+        <div class="flex flex-col-2 ml-3 pt-3">
             <div class="text-lg font-semibold">Add to your feed</div>
             <div class="ml-40 hover:underline  text-blue-500  text-sm">See all</div>
         </div>
