--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -123,6 +123,10 @@
             <li><a [routerLink]="['falcon-e-commerce-pos-location']">Sales by POS location </a></li>
             <li><a [routerLink]="['falcon-app-event-CreateEvent']">Create Event </a></li>
 
+            <li><a [routerLink]="['falcon-e-commerce-Product_Gird_Product_Details']">Product gird y product details </a></li>
+            <li><a [routerLink]="['falcon-e-commerce-wekly-Sales']"> e-commerce wekly sales </a></li>
+            
+
 
 
         </div>
