cambios en cart

--- a/src/app/feature/falcon/dashboard/shopping-cart/shopping-cart.component.html
+++ b/src/app/feature/falcon/dashboard/shopping-cart/shopping-cart.component.html
@@ -1,41 +1,46 @@
 <div class="border border-gray-400 h-auto w-fit rounded-lg">
     <div class="flex items-center p-3">
-    <span class="grow">Shopping Cart</span>
-    <div class="dropdown dropdown-end">
-        <label tabindex="0" class="btn btn-ghost rounded-btn">...</label>
-        <ul tabindex="0" class="menu dropdown-content p-2 shadow bg-base-100 rounded-box w-52 mt-4">
-            <li><a>View</a></li>
-            <li><a>Export</a></li>
-            <li>___________________________</li>
-            <li class="text-red-500"><a>Remove</a></li>
-        </ul>
+        <span class="grow">Shopping Cart</span>
+        <div class="dropdown dropdown-end">
+            <label tabindex="0" class="btn btn-ghost rounded-btn">...</label>
+            <ul tabindex="0" class="menu dropdown-content p-2 shadow bg-base-100 rounded-box w-52 mt-4">
+                <li><a>View</a></li>
+                <li><a>Export</a></li>
+                <li>___________________________</li>
+                <li class="text-red-500"><a>Remove</a></li>
+            </ul>
+        </div>
     </div>
-    </div>
-   
+
     <div>
         <table class="table">
-                <tbody>
-                    <tr>
-                        <td><span class="text-xs text-gray-500">Initiated</span> <br><progress class="progress progress-primary w-56" value="43.6" max="100"></progress></td>
-                        <td>43.6% <br><span class="text-xs"> Session: 6817 </span></td>
-                    </tr>
-                    <tr>
-                        <td><span class="text-xs text-gray-500">Abandonment rate</span><br><progress class="progress progress-secondary w-56" value="13.11" max="100"></progress></td>
-                        <td>13.11% <br><span class="text-xs">44 of 61</span></td>
-                    </tr>
-                    <tr>
-                        <td><span class="text-xs text-gray-500">Bounce rate</span> <br> <progress class="progress progress-primary w-56" value="20" max="100"></progress></td>
-                        <td>13.11%<br><span class="text-xs">8 of 61</span></td>
-                    </tr>
-                    <tr>
-                        <td><span class="text-xs text-gray-500">Completion rate</span> <br> <progress class="progress progress-primary w-56" value="30" max="100"></progress></td>
-                        <td>43.6$<br><span class="text-xs">18 of 179</span></td>
-                    </tr>
-                    <tr>
-                        <td><span class="text-xs text-gray-500">Revenue Rate</span> <br><progress class="progress progress-primary w-56" value="60" max="100"></progress></td>
-                        <td>60.5%<br><span class="text-xs">18 of 179</span></td>
-                    </tr>
-                </tbody>
+            <tbody>
+                <tr>
+                    <td><span class="text-xs text-gray-500">Initiated</span> <br><progress
+                            class="progress progress-primary w-56" value="43.6" max="100"></progress></td>
+                    <td>43.6% <br><span class="text-xs"> Session: 6817 </span></td>
+                </tr>
+                <tr>
+                    <td><span class="text-xs text-gray-500">Abandonment rate</span><br><progress
+                            class="progress progress-secondary w-56" value="13.11" max="100"></progress></td>
+                    <td>13.11% <br><span class="text-xs">44 of 61</span></td>
+                </tr>
+                <tr>
+                    <td><span class="text-xs text-gray-500">Bounce rate</span> <br> <progress
+                            class="progress progress-primary w-56" value="20" max="100"></progress></td>
+                    <td>13.11%<br><span class="text-xs">8 of 61</span></td>
+                </tr>
+                <tr>
+                    <td><span class="text-xs text-gray-500">Completion rate</span> <br> <progress
+                            class="progress progress-primary w-56" value="30" max="100"></progress></td>
+                    <td>43.6$<br><span class="text-xs">18 of 179</span></td>
+                </tr>
+                <tr>
+                    <td><span class="text-xs text-gray-500">Revenue Rate</span> <br><progress
+                            class="progress progress-primary w-56" value="60" max="100"></progress></td>
+                    <td>60.5%<br><span class="text-xs">18 of 179</span></td>
+                </tr>
+            </tbody>
         </table>
     </div>
 </div>
