agrega tabla de notificaciones

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -121,6 +121,7 @@
             <li><a [routerLink]="['falcon-dashboard-management-WELCOME_TOFALCON']">WELCOME TO FALCON </a></li>
             <li><a [routerLink]="['falcon-dashboard-default-TOP_PRODUCTS']">TOP PRODUCTS </a></li>
             <li><a [routerLink]="['falcon-e-commerce-pos-location']">Sales by POS location </a></li>
+            <li><a [routerLink]="['falcon-social-notifications']">Notifications</a></li>
 
 
         </div>
