--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -123,6 +123,7 @@
             <li><a [routerLink]="['falcon-e-commerce-pos-location']">Sales by POS location </a></li>
             <li><a [routerLink]="['falcon-e-commerce-wekly-Sales']"> e-commerce wekly sales </a></li>
             <li><a [routerLink]="['falcon-dashboard-default-weklySales']"> default wekly sales </a></li>
+            <li><a [routerLink]="['falcon-e-commerce-product-grid-detais']"> product grid-details </a></li>
 
 
         </div>
