--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -84,6 +84,7 @@
             <li><a [routerLink]="['Falcon-dashboard-Social-create-post']">Create Post</a></li>
             <li><a [routerLink]="['Falcon-dashboard-Social-Add-to-your-feed']">Add to your feed</a></li>
             <li><a [routerLink]="['Falcon-dashboard-Social-You-may-interested']">You may interested</a></li>
+            <li><a [routerLink]="['Falcon-dashboard-Social-rowan-atkinson']">Rowan Atkinson</a></li>
             <li><a [routerLink]="['Falcon-Analytics-Completed']">Componented Goals</a></li>
             <li><a [routerLink]="['falcon-dashboard-default-running']">Running Projects</a></li>
             <li><a [routerLink]="['falcon-dashboard-analytics-intelligence']">Ask Falcon Intelligence</a></li>
