nuevo menu de saas BANDWIDTH SAVED

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -124,6 +124,7 @@
             <li><a [routerLink]="['falcon-e-commerce-wekly-Sales']"> e-commerce wekly sales </a></li>
             <li><a [routerLink]="['falcon-dashboard-default-weklySales']"> default wekly sales </a></li>
             <li><a [routerLink]="['falcon-dashboard-e-commerce-Shopping-Cart']">Shopping Cart</a></li>
+            <li><a [routerLink]="['falcon-dashboard-saas-BANDWIDTH_SAVED']">Bandwidth Saved</a></li>
 
 
         </div>
