--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -125,6 +125,7 @@
             <li><a [routerLink]="['falcon-dashboard-default-weklySales']"> default wekly sales </a></li>
             <li><a [routerLink]="['falcon-dashboard-e-commerce-Shopping-Cart']">Shopping Cart</a></li>
             <li><a [routerLink]="['falcon-dashboard-management-Recent-Activity']">Recent Activity</a></li>
+            <li><a [routerLink]="['falcon-dashboard-e-commerce-Top-Products']">Top Products</a></li>
 
 
         </div>
