--- a/src/app/feature/falcon/e-commerce/top-products/top-products.component.html
+++ b/src/app/feature/falcon/e-commerce/top-products/top-products.component.html
@@ -1,1 +1,34 @@
-<p>top-products works!</p>
+<div class="w-auto border  border-r-slate-200 rounded-md ">
+    <div class=" h-8 w-auto flex flex-row pb-8  pl-4 pr-5 border border-slate-200 bg-slate-200">
+        <span class=" grow  text-black font-semibold pr-80"> Top Products</span>
+
+        <a class="  font-semibolt text-blue-500 pr-2 " href="#">Views Detaills</a>
+
+        <div class="dropdown dropdown-end hover:shadow-md rounded-md ">
+            <label tabindex="0"
+                class="btn btn-square btn-ghost btn-xs hover:shadow-md hover:bg-gray-100  text-black "><svg
+                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                    class="inline-block w-5 h-5 stroke-current ">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z">
+                    </path>
+                </svg></label>
+            <ul tabindex="0" class="dropdown-content menu  shadow rounded-box w-24  border border-gray-200 bg-white">
+                <li><a class="text-gray-900 block text-xs" role="menuitem" tabindex="-1" id="menu-item-0">View</a></li>
+                <li><a class="text-gray-500 block text-xs" role="menuitem" tabindex="-1" id="menu-item-1">Export</a>
+                </li>
+                <li><a class="text-red-500 block text-xs" role="menuitem" tabindex="-1" id="menu-item-2">Remove</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="w-full h-full pt-2 pl-2">
+        <canvas baseChart class="w-5/5 h-96" 
+        [data]="barChartData " 
+        [plugins]="barChartPlugins"
+        [legend]="barChartLegend" 
+        [type]="'bar'">
+        </canvas>
+
+    </div>
+</div>
