--- a/src/app/feature/falcon/allorden/allorden.component.html
+++ b/src/app/feature/falcon/allorden/allorden.component.html
@@ -1,4 +1,4 @@
-<div class=" flex relative stats shadow bg-white max-w-xs">
+<div   class="flex relative stats shadow bg- bg-gradient-to-r from-white  via-white to-cyan-300 max-w-xs">
 
   <div class="stat">
     <div class="stat-figure text-secondary">
