--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -125,7 +125,7 @@
             <li><a [routerLink]="['falcon-dashboard-default-weklySales']"> default wekly sales </a></li>
             <li><a [routerLink]="['falcon-dashboard-e-commerce-Shopping-Cart']">Shopping Cart</a></li>
             <li><a [routerLink]="['allorden']">All Orders</a></li>
-
+            <li><a [routerLink]="['revenues']">Revenues</a></li>
         </div>
     </div>
 </ul>
