--- a/src/app/feature/falcon/revenues/revenues.component.html
+++ b/src/app/feature/falcon/revenues/revenues.component.html
@@ -1,1 +1,17 @@
-<p>revenues works!</p>
+<div   class="flex relative stats shadow bg- bg-gradient-to-r from-white  via-white to-green-200 max-w-xs">
+
+  <div class="stat">
+    <div class="stat-figure text-secondary">
+      <div>
+      </div>
+    </div>
+    <td><span class="bg-green-400 text-green-700 rounded-xl p-1 text-xs ml-20 ">9.54%</span> </td>
+    <div class="flex flex-row">
+    <div class="stat-title text-black font-semibold -mt-8">Revenue</div>
+    </div>
+    <div class="  h-15 w-50 p-2 ">
+      <div class=" stat-value font-medium pt-6 pb-4 text-gray-400 -mt-7">$43,594K</div>
+    </div>
+  </div>
+  <h2 class="link link-hover text-sky-800 mt-32 -ml-72" href="#">Statistics ></h2>
+</div>
