--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -127,7 +127,7 @@
             <li><a [routerLink]="['falcon-dashboard-management-Recent-Activity']">Recent Activity</a></li>
             <li><a [routerLink]="['falcon-dashboard-e-commerce-Top-Products']">Top Products</a></li>
             <li><a [routerLink]="['falcon-saas-active-users']">SaaS: Active Users </a></li>
-
+            <li><a [routerLink]="['falcon-saas-revenue']">Revenue</a></li>
 
         </div>
     </div>
