--- a/src/app/feature/falcon/social/notifications/falcon-social-notifications/falcon-social-notifications.component.html
+++ b/src/app/feature/falcon/social/notifications/falcon-social-notifications/falcon-social-notifications.component.html
@@ -1,15 +1,15 @@
 <div class="card shadow-lg rounded border border-gray-200">
-  <div class="flex justify-between">
-    <div class="bg-slate-50 p-4 text-gray-700 h-16 font-semibold text-2xl">
-      <h3>Your Notifications</h3>
+  <div class="flex justify-between items-center p-4 bg-slate-50">
+    <div class="text-gray-700 font-semibold text-xl">
+      <h6>Your Notifications</h6>
     </div>
     <div>
-      <a href="" class="link link-hover text-blue-400">Mark all as read</a>
+      <a href="" class="link link-hover text-blue-400 font-sans">Mark all as read</a>
     </div>
   </div>
-    <hr>
+
     <div class="">
-      <a class="flex flex-row cursor-pointer h-20">
+      <a class="flex flex-row  h-24" href="">
         <div class="p-2">
           <div class="avatar p-2">
             <div class="w-8 rounded-full">
@@ -17,17 +17,19 @@
             </div>
           </div>
         </div>
-        <div class="ml-2 text-base">
+        <div class="ml-2 text-sm">
           <p class="mt-4">
-            Announcing the winners of the 
+            Announcing the winners of the
             <strong>The only book awards</strong>
             decided by you, the readers. Check out the champions and runners-up in all 21 categories now!
           </p>
-          <span class="text-slate-500">📢 Just Now</span>
+          <div class="mt-2">
+            <span class="text-slate-500">📢 Just Now</span>
+          </div>
         </div>
       </a>
-      <hr>
-      <a class="flex flex-row cursor-pointer h-20">
+
+      <a class="flex flex-row  h-24 bg-blue-50 hover:bg-blue-100" href="">
         <div class="p-2">
           <div class="avatar p-2">
             <div class="w-8 rounded-full">
@@ -35,17 +37,19 @@
             </div>
           </div>
         </div>
-        <div class="ml-2 text-base">
+        <div class="ml-2 text-sm">
           <p class="mt-4">
-            Last chance to vote in 
+            Last chance to vote in
             <strong>The 2018 Falcon Choice Awards</strong>
             ! See what made it to the Final Round and help your favorites take home the win. Voting closes on November 26
           </p>
-          <span class="text-gray-500">🏆 15m</span>
+          <div class="mt-2">
+            <span class="text-gray-500">🏆 15m</span>
+          </div>
         </div>
       </a>
-      <hr>
-      <a class="flex flex-row cursor-pointer h-20">
+
+      <a class="flex flex-row  h-20" href="">
         <div class="notification-avatar p-2">
           <div class="avatar p-2">
             <div class="w-8 rounded-full">
@@ -53,18 +57,20 @@
             </div>
           </div>
         </div>
-        <div class="ml-2 text-base">
+        <div class="ml-2 text-sm">
           <p class="mt-4">
-            <strong>Jennifer Kent</strong> 
-            declared you as a 
-            <strong>President</strong> 
+            <strong>Jennifer Kent</strong>
+            declared you as a
+            <strong>President</strong>
             of Computer Science and Engineering Society
           </p>
-          <span class="text-slate-500">📢 1h</span>
+          <div class="mt-2">
+            <span class="text-slate-500">📢 1h</span>
+          </div>
         </div>
       </a>
-      <hr>
-      <a class="flex flex-row cursor-pointer h-20">
+
+      <a class="flex flex-row  h-24 bg-blue-50 hover:bg-blue-100" href="">
         <div class="notification-avatar p-2">
           <div class="avatar p-2">
             <div class="w-8 rounded-full">
@@ -72,18 +78,20 @@
             </div>
           </div>
         </div>
-        <div class="ml-2 text-base">
+        <div class="ml-2 text-sm">
           <p class="mt-4">
-            Congratulate 
-            <strong>Woody Allen</strong> 
-            for starting a new position as Business Development Manager & Implementation Engineer at 
+            Congratulate
+            <strong>Woody Allen</strong>
+            for starting a new position as Business Development Manager & Implementation Engineer at
             <strong>Hewlett Packard Enterprise(HP)</strong>
           </p>
-          <span class="text-slate-500">🎁 6h</span>
+          <div class="mt-2">
+            <span class="text-slate-500">🎁 6h</span>
+          </div>
         </div>
       </a>
-      <hr>
-      <a class="flex flex-row cursor-pointer h-20">
+
+      <a class="flex flex-row  h-20 bg-blue-50 hover:bg-blue-100" href="">
         <div class="notification-avatar p-2">
           <div class="avatar p-2">
             <div class="w-8 rounded-full">
@@ -91,15 +99,18 @@
             </div>
           </div>
         </div>
-        <div class="ml-2 text-base">
+        <div class="ml-2 text-sm">
           <p class="mt-4">
             <strong>Christopher Nolan</strong>
             Mentioned you in a comment : "Congratulations! Wishing you a great future. Proud fo you ❤️"
-          </p><span class="text-slate-500">💬 8h</span>
+          </p>
+          <div class="mt-2">
+            <span class="text-slate-500">💬 8h</span>
+          </div>
         </div>
       </a>
-      <hr>
-      <a class="flex flex-row cursor-pointer h-20">
+
+      <a class="flex flex-row  h-20" href="">
         <div class="notification-avatar p-2">
           <div class="avatar p-2">
             <div class="w-8 rounded-full">
@@ -107,16 +118,20 @@
             </div>
           </div>
         </div>
-        <div class="ml-2 text-base">
+        <div class="ml-2 text-sm">
           <p class="mt-4">
-            <strong>Jennifer Kent</strong> Congratulated 
-            <strong>Anthony Hopkins</strong>
+            Join
+            <strong>GIS Institute Winter 2019</strong>
+            Event arranged by <strong>Harvard University</strong>
+            . Only three days to go.
           </p>
-          <span class="text-slate-500">November 13, 5:00 Am</span>
+          <div class="mt-2">
+            <span class="text-slate-500">🚶 9h</span>
+          </div>
         </div>
       </a>
-      <hr>
-      <a class="flex flex-row cursor-pointer h-20">
+
+      <a class="flex flex-row  h-20 bg-blue-50 hover:bg-blue-100" href="">
         <div class="notification-avatar p-2">
           <div class="avatar p-2">
             <div class="w-8 rounded-full">
@@ -124,16 +139,19 @@
             </div>
           </div>
         </div>
-        <div class="ml-2 text-base">
+        <div class="ml-2 text-sm">
           <p class="mt-4">
-            <strong>California Institute of Technology</strong> tagged 
-            <strong>Anthony Hopkins</strong> in a post.
+            <strong>Peter Jackson</strong>
+            set CSE Curnival Programe in New Museums Site in
+            <strong>University of Cambridge</strong>
           </p>
-          <span class="text-slate-500">November 8, 5:00 PM</span>
+          <div class="mt-2">
+            <span class="text-slate-500">💻 14h</span>
+          </div>
         </div>
       </a>
-      <hr>
-      <a class="flex flex-row cursor-pointer h-20">
+
+      <a class="flex flex-row  h-20" href="">
         <div class="notification-avatar p-2">
           <div class="avatar p-2">
             <div class="w-8 rounded-full">
@@ -141,17 +159,19 @@
             </div>
           </div>
         </div>
-        <div class="ml-2 text-base">
+        <div class="ml-2 text-sm">
           <p class="mt-4">
-            <strong>Anthony Hopkins</strong> joined 
-            <strong>Victory day cultural Program</strong> with 
-            <strong>Tony Stark</strong>
+            <strong>David Fincher</strong>
+            declared you as a verified member of
+            <strong>Stanford University.</strong>
           </p>
-          <span class="text-slate-500">November 01, 11:30 AM</span>
+          <div class="mt-2">
+            <span class="text-slate-500">✔️ 2d</span>
+          </div>
         </div>
       </a>
-      <hr>
-      <a class="flex flex-row cursor-pointer h-20">
+
+      <a class="flex flex-row  h-24" href="">
         <div class="notification-avatar p-2">
           <div class="avatar p-2">
             <div class="w-8 rounded-full">
@@ -159,15 +179,18 @@
             </div>
           </div>
         </div>
-        <div class="ml-2 text-base">
+        <div class="ml-2 text-sm">
           <p class="mt-4">
-            <strong>Massachusetts Institute of Technology</strong> invited 
-            <strong>Anthony Hopkin</strong> to an event
+            Follow
+            <strong>International Conference on Water and Environmental Engineering (ICWEE)</strong>
+            event arranged by United Nations Development Program on 30 December 2018
           </p>
-          <span class="text-slate-500">October 28, 12:00 PM</span>
+          <div class="mt-2">
+            <span class="text-slate-500">🔍 3d</span>
+          </div>
         </div>
       </a>
-      <a class="flex flex-row cursor-pointer h-20">
+      <a class="flex flex-row  h-20" href="">
         <div class="notification-avatar p-2">
           <div class="avatar p-2">
             <div class="w-8 rounded-full">
@@ -175,15 +198,17 @@
             </div>
           </div>
         </div>
-        <div class="ml-2 text-base">
+        <div class="ml-2 text-sm">
           <p class="mt-4">
-            <strong>Massachusetts Institute of Technology</strong> invited 
-            <strong>Anthony Hopkin</strong> to an event
+            <strong>James Cameron</strong>
+            invited to join the group: United Nations International Children's Fund
           </p>
-          <span class="text-slate-500">October 28, 12:00 PM</span>
+          <div class="mt-2">
+            <span class="text-slate-500">🙋‍ 2d</span>
+          </div>
         </div>
       </a>
-      <a class="flex flex-row cursor-pointer h-20">
+      <a class="flex flex-row  h-20 bg-blue-50 hover:bg-blue-100" href="">
         <div class="notification-avatar p-2">
           <div class="avatar p-2">
             <div class="w-8 rounded-full">
@@ -191,12 +216,14 @@
             </div>
           </div>
         </div>
-        <div class="ml-2 text-base">
+        <div class="ml-2 text-sm">
           <p class="mt-4">
-            <strong>Massachusetts Institute of Technology</strong> invited 
-            <strong>Anthony Hopkin</strong> to an event
+            <strong>University of Oxford</strong>
+            created an event : "Causal Inference Hilary 2019"
           </p>
-          <span class="text-slate-500">October 28, 12:00 PM</span>
+          <div class="mt-2">
+            <span class="text-slate-500">✌️ 1w</span>
+          </div>
         </div>
       </a>
     </div>
