--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -126,6 +126,7 @@
             <li><a [routerLink]="['falcon-dashboard-e-commerce-Shopping-Cart']">Shopping Cart</a></li>
             <li><a [routerLink]="['falcon-dashboard-management-Recent-Activity']">Recent Activity</a></li>
             <li><a [routerLink]="['falcon-dashboard-e-commerce-Top-Products']">Top Products</a></li>
+            <li><a [routerLink]="['falcon-APP-eemail-inbox']">Inbox</a></li>
 
 
         </div>
