nuevo menu de saas MORE_WITH_FALCON

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -128,6 +128,7 @@
             <li><a [routerLink]="['falcon-dashboard-management-Recent-Activity']">Recent Activity</a></li>
             <li><a [routerLink]="['falcon-dashboard-e-commerce-Top-Products']">Top Products</a></li>
             <li><a [routerLink]="['falcon-saas-active-users']">SaaS: Active Users </a></li>
+            <li><a [routerLink]="['falcon-dashboard-saas-MOREWITH_FALCON']">MORE WITH FALCON </a></li>
 
 
         </div>
