--- a/src/app/feature/falcon/event/falcon-app-event-event-details/falcon-app-event-event-details.component.html
+++ b/src/app/feature/falcon/event/falcon-app-event-event-details/falcon-app-event-event-details.component.html
@@ -11,8 +11,8 @@
     <input placeholder="d/m/y" name="startDate" id="startDate" class="form-control" value="">
 
   </div>
-  <div>
-    <label class="form-label" for="startTime">Start Time</label>
+  <div class="Flex Flex-row">
+    <label class="form-label Flex Flex-row" for="startTime">Start Time</label>
   </div>
   <div>
     <input placeholder="H:i" name="startTime" id="startTime" class="form-control" value="">
