--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -129,6 +129,7 @@
             <li><a [routerLink]="['falcon-dashboard-management-Recent-Activity']">Recent Activity</a></li>
             <li><a [routerLink]="['falcon-dashboard-e-commerce-Top-Products']">Top Products</a></li>
             <li><a [routerLink]="['falcon-saas-active-users']">SaaS: Active Users </a></li>
+            <li><a [routerLink]="['falcon-management-customers']">Management: Customers</a></li>
 
 
         </div>
