--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -135,6 +135,7 @@
             <li><a [routerLink]="['falcon-saas-active-users']">SaaS: Active Users </a></li>
             <li><a [routerLink]="['falcon-saas-revenue']">Revenue</a></li>
             <li><a [routerLink]="['falcon-saas-conversion']">Conversion</a></li>
+            <li><a [routerLink]="['falcon-app-event-OtherInfo']">Other Info</a></li>
 
         </div>
     </div>
