--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -133,6 +133,7 @@
             <li><a [routerLink]="['falcon-saas-active-users']">SaaS: Active Users </a></li>
             <li><a [routerLink]="['falcon-saas-revenue']">Revenue</a></li>
             <li><a [routerLink]="['falcon-saas-conversion']">Conversion</a></li>
+            <li><a [routerLink]="['falcon-APP-eemail-eemail-detail']">Email Datail</a></li>
 
         </div>
     </div>
